fixed some alignments

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -139,7 +139,23 @@
 
   @media only screen and (min-width: 360px) {
     .footer-container {
-      width: 360px;
+      width: 100%;
+      height:25vh;
+    }
+
+    .footer-link-items {
+     size:30%;
+    }
+
+    .social-media {
+      max-width: 200px;
+      width: 100%;
+    }
+  }
+
+  @media only screen and (min-width: 400px) {
+    .footer-container {
+      width: 100%;
       height:25vh;
     }
 
@@ -155,7 +171,7 @@
 
   @media only screen and (min-width: 768px) {
     .footer-container {
-      width: 750px;
+      width: 100%;
       height:25vh;
     }
 
@@ -171,7 +187,7 @@
 
   @media only screen and (min-width: 1200px) {
     .footer-container {
-      width: 1000px;
+      width: 100%;
       height:25vh;
     }
 
@@ -187,7 +203,7 @@
 
   @media only screen and (min-width: 1600px) {
     .footer-container {
-      width: 1500px;
+      width: fit-content;
       height:50vh;
     }
 
